fixed icons spacing issue

--- a/app.css
+++ b/app.css
@@ -88,6 +88,10 @@ li {
   margin-right: 40px;
 }
 
+.margin-right-20 {
+  margin-right: 20px;
+}
+
 .margin-left-40 {
   margin-left: 40px;
 }
